# dad-joke-collector

./: Cargo.toml  Readme.md
debian/: config.toml  dad-jokes-collector.service  postinst  postrm
src/: config.rs  db.rs  main.rs  models.rs
